# gul17

./: .gitignore  LIBNO  LICENSE.md  Makefile  README.md  gul17.spec  libgul14.spec  make_gul17.sh  meson.build  meson_options.txt
.github/workflows/: doxygen.yml  generate_gul17.yml
.gitlab-ci/: build.yml
data/: Doxyfile.in  doxygen.h  doxygen_footer.html  gul17.cdr  gul17.spec  how_to_create_a_vcpkg_port.txt  style.css
debian/: changelog  check_control  clean  control  control.in  copyright  copyright.in  dev-doocs-gul17.install  meson.build  rules  rules.in
docs/: GSL_utilities.html  OverloadSet_8h.html  OverloadSet_8h__dep__incl.map  OverloadSet_8h__dep__incl.md5  OverloadSet_8h_source.html  SlidingBuffer_8h.html  SlidingBuffer_8h__dep__incl.map  SlidingBuffer_8h__dep__incl.md5  SlidingBuffer_8h__incl.map  SlidingBuffer_8h__incl.md5  SlidingBuffer_8h_source.html  SmallVector_8h.html  SmallVector_8h__dep__incl.map  SmallVector_8h__dep__incl.md5  SmallVector_8h__incl.map  SmallVector_8h__incl.md5  SmallVector_8h_source.html  ThreadPool_8cc.html  ThreadPool_8cc__incl.map  ThreadPool_8cc__incl.md5  ThreadPool_8h.html  ThreadPool_8h__dep__incl.map  ThreadPool_8h__dep__incl.md5  ThreadPool_8h__incl.map  ThreadPool_8h__incl.md5  ThreadPool_8h_source.html  Trigger_8cc.html  Trigger_8cc__incl.map  Trigger_8cc__incl.md5  Trigger_8h.html  Trigger_8h__dep__incl.map  Trigger_8h__dep__incl.md5  Trigger_8h__incl.map  Trigger_8h__incl.md5  Trigger_8h_source.html  annotated.html  bit__manip_8h.html  bit__manip_8h__dep__incl.map  bit__manip_8h__dep__incl.md5  bit__manip_8h__incl.map  (+318 more)
examples/: thread_pool.cc  trim.cc
include/gul17/: DataTree.h  OverloadSet.h  SlidingBuffer.h  SmallVector.h  ThreadPool.h  Trigger.h  bit_manip.h  case_ascii.h  cat.h  catch.h  data_processors.h  date.h  escape.h  expected.h  finalizer.h  gcd_lcm.h  gul.h  hexdump.h  internal.h  join_split.h  meson.build  num_util.h  replace.h  span.h  statistics.h  string_util.h  substring_checks.h  time_util.h  to_number.h  tokenize.h  traits.h  traits.h_  trim.h  type_name.h  utility.h  variant.h  version.h
src/: ThreadPool.cc  Trigger.cc  case_ascii.cc  cat.cc  escape.cc  meson.build  replace.cc  string_util.cc  to_number.cc  trim.cc  version.cc.in
src/data_processors/: json_processor.cc  xml_processor.cc  yaml_processor.cc
tests/: lint  meson.build  test_OverloadSet.cc  test_SlidingBuffer.cc  test_SmallVector.cc  test_ThreadPool.cc  test_Trigger.cc  test_backports.cc  test_bit_manip.cc  test_case_ascii.cc  test_cat.cc  test_escape.cc  test_expected.cc  test_finalizer.cc  test_gcd_lcm.cc  test_hexdump.cc  test_join_split.cc  test_main.cc  test_num_util.cc  test_replace.cc  test_self_containment.cc.in  test_statistics.cc  test_string_util.cc  test_substring_checks.cc  test_time_util.cc  test_to_number.cc  test_tokenize.cc  test_trim.cc  test_type_name.cc  test_variant.cc
tests/data_processors/: test_json_processor.cc  test_xml_processor.cc  test_yaml_processor.cc
tools/: cat.py  doxywrap  make_vs.bat  meson.build  migrate_gul14_to_gul17.bash  single_gul
